more work on epubchecker